move/PCI_8164.cs

    
    // Pitch compensate function
    [DllImport("8164.dll")]public static extern Int16 _8164_set_pitch_compensate(System.Int16 AxisNo, System.Int16 TableSize, ref System.Int32 PTableArray, ref System.Int32 NTableArray, System.Int32 TableInterval);
    [DllImport("8164.dll")]public static extern Int16 _8164_enable_pitch_compensate(System.Int16 AxisNo, System.Int16 Enable);
    [DllImport("8164.dll")]public static extern Int16 _8164_calculate_amove_pitch_compensate(System.Int16 AxisNo, System.Double Pos, ref System.Double Result);
    [DllImport("8164.dll")]public static extern Int16 _8164_calculate_rmove_pitch_compensate(System.Int16 AxisNo, System.Double Dist, ref System.Double Result);  
    [DllImport("8164.dll")]public static extern Int16 _8164_get_pitch_table_target_pos(System.Int16 AxisNo, ref System.Double TargetPos);
    [DllImport("8164.dll")]public static extern Int16 _8164_tv_move(System.Int16 AxisNo, System.Double StrVel,  System.Double MaxVel, System.Double Tacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_sv_move(System.Int16 AxisNo, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double SVacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_emg_stop(System.Int16 AxisNo);
    [DllImport("8164.dll")]public static extern Int16 _8164_sd_stop(System.Int16 AxisNo, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_sd_stop_ex(System.Int16 AxisNo,  System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_v_change(System.Int16 AxisNo, System.Double NewVel, System.Double Time);
    [DllImport("8164.dll")]public static extern Int16 _8164_cmp_v_change(System.Int16 AxisNo, System.Double Res_Dist, System.Double OldVel, System.Double NewVel, System.Double Time);
    [DllImport("8164.dll")]public static extern Int16 _8164_p_change(System.Int16 AxisNo, System.Double NewPos);
    [DllImport("8164.dll")]public static extern Int16 _8164_fix_speed_range(System.Int16 AxisNo, System.Double MaxVel);
    [DllImport("8164.dll")]public static extern Int16 _8164_unfix_speed_range(System.Int16 AxisNo);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_continuous_move(System.Int16 AxisNo, System.Int16 conti_logic);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_soft_limit(System.Int16 AxisNo, System.Int32 PLimit, System.Int32 NLimit);
    [DllImport("8164.dll")]public static extern Int16 _8164_disable_soft_limit(System.Int16 AxisNo);
    [DllImport("8164.dll")]public static extern Int16 _8164_enable_soft_limit(System.Int16 AxisNo, System.Int16 Action);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_error_counter_check(System.Int16 AxisNo, System.Int16 Tolerance, System.Int16 On_Off);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_general_comparator(System.Int16 AxisNo, System.Int16 CmpSrc, System.Int16 CmpMethod, System.Int16 CmpAction, System.Double Data);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_trigger_comparator(System.Int16 AxisNo, System.Int16 CmpSrc, System.Int16 CmpMethod, System.Double Data);       
    [DllImport("8164.dll")]public static extern Int16 _8164_set_trigger_type(System.Int16 AxisNo, System.Int16 TriggerType);
    [DllImport("8164.dll")]public static extern Int16 _8164_check_compare_data(System.Int16 AxisNo, System.Int16 CompType, ref System.Double Pos);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_move(System.Int16 AxisNo, System.Double Dist, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_move(System.Int16 AxisNo, System.Double Pos, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_move(System.Int16 AxisNo, System.Double Dist, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_move(System.Int16 AxisNo, System.Double Pos, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    
    
    
    // Speed Profile Calculation
    [DllImport("8164.dll")]public static extern Int16 _8164_get_tr_move_profile(System.Int16 AxisNo, System.Double Dist, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, ref System.Double pStrVel, ref System.Double pMaxVel, ref System.Double pTacc, ref System.Double pTdec,  ref System.Double pTconst);  
    [DllImport("8164.dll")]public static extern Int16 _8164_get_ta_move_profile(System.Int16 AxisNo, System.Double Pos, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, ref System.Double pStrVel, ref System.Double pMaxVel, ref System.Double pTacc, ref System.Double pTdec,  ref System.Double pTconst);  
    [DllImport("8164.dll")]public static extern Int16 _8164_get_sr_move_profile(System.Int16 AxisNo, System.Double Dist, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec, ref System.Double pStrVel, ref System.Double pMaxVel, ref System.Double pTacc, ref System.Double pTdec, ref System.Double pSVacc, ref System.Double pSVdec, ref System.Double pTconst);
    [DllImport("8164.dll")]public static extern Int16 _8164_get_sa_move_profile(System.Int16 AxisNo, System.Double Pos, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec, ref System.Double pStrVel, ref System.Double pMaxVel, ref System.Double pTacc, ref System.Double pTdec, ref System.Double pSVacc, ref System.Double pSVdec, ref System.Double pTconst);
    
    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_move_xy(System.Int16 CardNo, System.Double DistX, System.Double DistY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_move_xy(System.Int16 CardNo, System.Double PosX, System.Double PosY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_move_xy(System.Int16 CardNo, System.Double DistX, System.Double DistY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec); 
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_move_xy(System.Int16 CardNo, System.Double PosX, System.Double PosY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec); 

    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_move_zu(System.Int16 CardNo, System.Double DistX, System.Double DistY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_move_zu(System.Int16 CardNo, System.Double PosX, System.Double PosY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_move_zu(System.Int16 CardNo, System.Double DistX, System.Double DistY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_move_zu(System.Int16 CardNo, System.Double PosX, System.Double PosY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);

    [DllImport("8164.dll")]public static extern Int16 _8164_start_a_arc_xy(System.Int16 CardNo, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double MaxVel);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_r_arc_xy(System.Int16 CardNo, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double MaxVel);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_a_arc_zu(System.Int16 CardNo, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double MaxVel);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_r_arc_zu(System.Int16 CardNo, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double MaxVel);
    
    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_line2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double DistX, System.Double DistY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_line2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double PosX, System.Double PosY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_line2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double DistX, System.Double DistY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_line2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double PosX, System.Double PosY, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);

    [DllImport("8164.dll")]public static extern Int16 _8164_start_r_arc2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double MaxVel);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_a_arc2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double MaxVel);


    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_line3(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double DistX, System.Double DistY, System.Double DistZ, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_line3(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double PosX, System.Double PosY, System.Double PosZ, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_line3(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double DistX, System.Double DistY, System.Double DistZ, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_line3(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double PosX, System.Double PosY, System.Double PosZ, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);

